sem-1-week-2 assets path fix

--- a/semester-1/week-2.html
+++ b/semester-1/week-2.html
@@ -118,7 +118,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/w2-2.jpeg" alt="">
+                <img src="assets/images/w2-2.jpeg" alt="">
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -137,21 +137,21 @@
             <section class="exp-row cols-4">
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/foucault.jpeg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/foucault.jpeg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>Michel Foucault</strong> <br>French Historian and Philosopher
                     </figcaption>
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/manovich.jpeg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/manovich.jpeg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>Lev Manovich</strong> <br>American Theorist of Digital Culture
                     </figcaption>
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column; ">
-                    <img src="/assets/images/lippold.jpg"
+                    <img src="assets/images/lippold.jpg"
                         style="width:100%; height:100%; object-fit:cover; object-position: center -30px; flex:1;">
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>John Cheney-Lippold</strong> <br>American Assistant Professor @ U-M
@@ -159,7 +159,7 @@
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/zuboff.jpeg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/zuboff.jpeg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>Shoshana Zuboff</strong> <br>American Philosopher and Scholar
                     </figcaption>
@@ -210,7 +210,7 @@
                     <figure class="exp-block"
                         style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
 
-                        <img src="/assets/images/trevor-paglen.jpg" alt=""
+                        <img src="assets/images/trevor-paglen.jpg" alt=""
                             style="width:100%; height:100%; object-fit:cover; flex:1;">
 
                         <figcaption style="font-size:12px; margin-top:20px; text-align:left;">
@@ -227,7 +227,7 @@
                     <figure class="exp-block"
                         style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
 
-                        <img src="/assets/images/more-than-human.jpeg" alt=""
+                        <img src="assets/images/more-than-human.jpeg" alt=""
                             style="width:100%; height:100%; object-fit:cover; flex:1;">
 
                         <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
@@ -273,7 +273,7 @@
 
                 <div class="exp-block">
                     <div class="exp-block" style="overflow:hidden;">
-                        <img src="/assets/images/chad-frontend.png" alt=""
+                        <img src="assets/images/chad-frontend.png" alt=""
                             style="width:100%; object-fit:contain; flex:1; transform:scale(1.8); transform-origin:center; margin-bottom:50px; margin-left: 15px;">
                     </div>
                     <p><strong>CHAD</strong> is single AI agent (LLM) that I built on Coze after discovering during my
@@ -303,7 +303,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/coze-backend.png" alt="" style="object-fit: contain;">
+                <img src="assets/images/coze-backend.png" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>COZE</strong><em>
                         Backend</em></figcaption>
             </section>
