sem-1-week-5 path fix

--- a/semester-1/week-5.html
+++ b/semester-1/week-5.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <title>A-I: S1-W5</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/assets/styles.css">
+
     <base href="/algorithmic-identities/">
+
+    <link rel="icon" href="favicon.png" />
+    <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -33,21 +35,22 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="/semester-1/week-5.html" class="active"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="/semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="semester-1/week-5.html" class="active"><strong>W5</strong> : RPO Consult & RE-1</a>
+                        </li>
+                        <li><a href="semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -58,15 +61,15 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
+                        <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -86,7 +89,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/w13-feedback.jpg" alt="">
+                <img src="assets/images/w13-feedback.jpg" alt="">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>RPO Consult Feedback</strong>
                 </figcaption>
             </section>
@@ -118,19 +121,19 @@
             <section class="exp-row cols-4">
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/cath-1.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/cath-1.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/cath-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/cath-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/cath-3.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/cath-3.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/cath-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/cath-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
             </section>
@@ -169,10 +172,10 @@
 
             <!-- 4 COLUMNS -->
             <section class="exp-row cols-4">
-                <div class="exp-block"><img src="/assets/images/refik-1.png"></div>
-                <div class="exp-block"><img src="/assets/images/refik-2.png"></div>
-                <div class="exp-block"><img src="/assets/images/refik-3.png"></div>
-                <div class="exp-block"><img src="/assets/images/refik-4.png"></div>
+                <div class="exp-block"><img src="assets/images/refik-1.png"></div>
+                <div class="exp-block"><img src="assets/images/refik-2.png"></div>
+                <div class="exp-block"><img src="assets/images/refik-3.png"></div>
+                <div class="exp-block"><img src="assets/images/refik-4.png"></div>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -214,7 +217,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/w5-hero1.jpeg" alt="">
+                <img src="assets/images/w5-hero1.jpeg" alt="">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>The Social Dilemma</strong><em>
                         Netflix</em></figcaption>
             </section>
@@ -269,7 +272,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/w5-ted.jpg" alt="">
+                <img src="assets/images/w5-ted.jpg" alt="">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>The nightmare videos of childrens'
                         YouTube</strong><em>
                         James Bridle</em></figcaption>
@@ -293,7 +296,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/experiment2-planning.jpg" alt="" style="object-fit: contain;">
+                <img src="assets/images/experiment2-planning.jpg" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>RE1 Micro-Sprint</strong><em>
                         Plan</em></figcaption>
             </section>
@@ -310,7 +313,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/tiktok-log.png" alt="" style="object-fit: contain;">
+                <img src="assets/images/tiktok-log.png" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>TikTok</strong><em>
                         Sequence Log</em></figcaption>
             </section>
@@ -344,7 +347,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/instagram-log.png" alt="" style="object-fit: contain;">
+                <img src="assets/images/instagram-log.png" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Instagram</strong><em>
                         Sequence Log</em></figcaption>
             </section>
@@ -377,7 +380,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/youtube-log.png" alt="" style="object-fit: contain;">
+                <img src="assets/images/youtube-log.png" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>YouTube</strong><em>
                         Sequence Log</em></figcaption>
             </section>
@@ -438,15 +441,20 @@
 
 
     <!-- ACCORDION SCRIPT -->
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+
+            /* -----------------------------
+               1) LEFT NAV ACCORDION TOGGLES
+            ------------------------------ */
             document.querySelectorAll(".overview-group").forEach(group => {
                 const toggleBtn = group.querySelector(".nav-toggle");
                 const symbol = group.querySelector(".nav-toggle-symbol");
 
                 if (!toggleBtn || !symbol) return;
 
-                // init closed
+                // default closed
                 group.classList.remove("is-open");
                 toggleBtn.setAttribute("aria-expanded", "false");
                 symbol.textContent = "+";
@@ -457,58 +465,63 @@
                     symbol.textContent = isOpen ? "−" : "+";
                 });
             });
-        });
-    </script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
 
-            // Match /semester-1/week-1.html, /semester-1/week-2.html, etc.
-            const m = window.location.pathname.match(/week-(\d+)\.html$/);
-            const current = m ? parseInt(m[1], 10) : 1;
-
+            /* -----------------------------
+               2) BOTTOM-RIGHT WEEK NAV
+            ------------------------------ */
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
             const topBtn = document.getElementById("topBtn");
 
-            if (prev) {
-                prev.addEventListener("click", () => {
-                    if (current > 1) {
-                        window.location.href = `week-${current - 1}.html`; // stays in semester-1 folder
-                    }
-                });
-            }
-
-            if (next) {
-                next.addEventListener("click", () => {
-                    window.location.href = `week-${current + 1}.html`;
-                });
-            }
-
+            // Scroll to top
             if (topBtn) {
                 topBtn.addEventListener("click", () => {
                     window.scrollTo({ top: 0, behavior: "smooth" });
                 });
             }
 
-        });
+            // Detect semester + week from URL
+            // Works with GitHub Pages paths like:
+            // /algorithmic-identities/semester-1/week-15.html
+            const path = window.location.pathname;
+            const match = path.match(/semester-(\d+)\/week-(\d+)\.html$/);
 
-        /* Scroll to top */
-        document.getElementById("topBtn").addEventListener("click", () => {
-            window.scrollTo({ top: 0, behavior: "smooth" });
-        });
+            // If this page is NOT a week page, just stop here.
+            if (!match) return;
 
-        const group = document.querySelector(".overview-group");
-        const btn = document.getElementById("overviewToggle");
-        const symbol = document.getElementById("overviewSymbol");
+            const semester = parseInt(match[1], 10);
+            const currentWeek = parseInt(match[2], 10);
 
-        btn.setAttribute("aria-expanded", "false");
-        symbol.textContent = "+";
+            // Set last week per semester (edit SEM 2 when ready)
+            const LAST_WEEK_BY_SEMESTER = {
+                1: 15,
+                2: 15
+            };
+            const lastWeek = LAST_WEEK_BY_SEMESTER[semester] ?? 15;
 
-        btn.addEventListener("click", () => {
-            const isOpen = group.classList.toggle("is-open");
-            btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-            symbol.textContent = isOpen ? "−" : "+";
+            // Prev button
+            if (prev) {
+                if (currentWeek <= 1) {
+                    prev.style.display = "none";
+                } else {
+                    prev.addEventListener("click", () => {
+                        window.location.href = `semester-${semester}/week-${currentWeek - 1}.html`;
+                    });
+                }
+            }
+
+            // Next button
+            if (next) {
+                if (currentWeek >= lastWeek) {
+                    next.style.display = "none";
+                } else {
+                    next.addEventListener("click", () => {
+                        window.location.href = `semester-${semester}/week-${currentWeek + 1}.html`;
+                    });
+                }
+            }
+
         });
     </script>
 
